# Equinox

./: LICENSE  README.md  setup.cfg  setup.py
Example/: Example.ipynb  sample.csv
annotator_agreement/: fleiss_kappa.py
docs/: conf.py  index.rst
equinox/: fleiss_kappa.py  score.py
