[metadata]
name = equinox-gould29
version = 0.0.3
author = Justin Gould
author_email = gould29@purdue.edu
description = Equinox is a powerful and scalable Python library for calculating inter-annotator agreement scores for a variety of Natural Language Processing and Machine Learning tasks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gouldju1/Equinox
project_urls =
    Bug Tracker = https://github.com/gouldju1/Equinox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6